--- a/index.css
+++ b/index.css
@@ -20,3 +20,11 @@ a:active{
 #question-list > *{
   margin-bottom: 10px;
 }
+
+.backButton {
+    text-decoration: none; font: menu;
+    display: inline-block; padding: 2px 8px;
+    background: ButtonFace; color: ButtonText;
+    border-style: solid; border-width: 2px;
+    border-color: ButtonHighlight ButtonShadow ButtonShadow ButtonHighlight;
+}
